🚑 fix: resolve non visible error of main tag area
- add height property(height: 100vh) on main tag in index.css
- (In this case, the parent element didn't have any height value)
- (Leaflet set default value of height 0)

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ header > h1 {
   margin: 10px 0px;
 }
 
+main {
+  height: 100vh;
+}
+
 .stamp-tour {
   position: relative;
   height: 100vh;
